samples/_failures_safe/1761612026_b47cf5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acd1314c.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_acd1314c.c:142:14: error: expected ‘;’ at end of input
  142 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_acd1314c.c:142:9: error: expected declaration or statement at end of input
  142 |         token
      |         ^~~~~
./samples/SAFE/__tmp_acd1314c.c:142:9: error: expected declaration or statement at end of input
